--- a/mdnPage/styles.css
+++ b/mdnPage/styles.css
@@ -9,6 +9,14 @@ body
 }
 
 
+@media (min-width: 1440px) {
+  
+.header-top
+{
+  position: relative;
+  width: 100%;
+}
+
 .header-top .container
 {
     
@@ -99,7 +107,6 @@ body
   {
       margin-left: auto;
       margin-right: auto;
-      width: 100%;
       width: 1440px;
       display: flex;
       flex-flow: row wrap;
@@ -126,19 +133,184 @@ body
 
   .language-change-item
   {
-    font-weight: bold;
-  }
-
-  .language-change-item
-  {
-    align-items: center;
     margin-left: 993px;
+    font-weight: bold;
+    align-items: center;
     text-decoration: none;
   }
 
   .main
   {
-    margin: 0 12.5%;
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    padding-top: 15;
+    justify-content: center;
+  }
+
+  .up-note
+  {
+      margin-left: auto;
+      margin-right: auto;
+      border: 1px solid #CDCDCD;
+      border-left: 4px solid #CDCDCD;
+      border-radius: 4px;
+      height: 98px;
+      width: 1408;
+      background-color: #e8f4fc;
+  }
+
+.up-note-image
+{
+    padding-left: 25px;
+    padding-top: 25px;
+}
+
+.up-note-text
+{
+    margin-left: 10px;
+    padding-top: 20px;
+    padding-right: 25px;
+}
+
+
+}
+
+@media (min-width: 1037px) and (max-width: 1439px)
+{
+.header-top
+{
+  position: relative;
+  width: 100%;
+}
+
+.header-top .container
+{
+    
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    position: sticky;
+    align-items: center;
+    padding-top: 15;
+}
+
+
+.signUpButton
+{
+    width: 132.78px;
+    height: 32px;
+    background-color: black;
+    color: white;
+    border-color: black;
+    border: none;
+    border-radius: 5px;
+    font-weight: bolder;
+}
+
+
+.header-logo
+{
+    width: max-content;
+}
+
+.nav
+{
+    margin-right: auto;
+    order: 0;
+    width: max-content;
+}
+.nav-item
+{
+    color: #4E4E4E;
+    text-decoration: none;
+    margin-right: 25px;
+}
+
+.login-button, .theme-changer
+{
+    color: #4E4E4E;
+    text-decoration: none;
+    margin-right: 14px;
+    font-weight: bold;
+    font-size: 13.3;
+}
+
+.theme-changer
+{
+    margin-left: auto;
+    width: max-content;
+    margin-right: 10px;
+}
+
+.search-bar{
+    border: 1px solid #CDCDCD;
+    height: 20px;
+    width: 80px;
+    border-radius: 20px;
+    padding: 6px;
+    margin-top: 8px;
+    margin-right: 16px;
+    display: flex;
+    align-items: center;
+  }
+
+  .site-search
+  {
+    height: 26px;
+    width: 56px;
+    border: none;
+    font-size: 17px;
+  }
+  .header-logo
+  {
+    margin-right: 30px;
+  }
+
+  .header-bottom .container
+  {
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
+      display: flex;
+      flex-flow: row wrap;
+      position: sticky;
+      align-items: center;
+  }
+
+  .header-bottom
+  {
+    margin-top: 15px;
+    height: 32px;
+    border-bottom: 1px solid #CDCDCD;
+    border-top: 1px solid #CDCDCD;
+    align-items: center;
+    display: flex;
+    flex-flow: wrap;
+  }
+
+  .header-bottom-item, .language-change-item
+  {
+    color: #4E4E4E;
+    text-decoration: none;
+    font-size: 16px;
+  }
+
+  .language-change-item
+  {
+    font-weight: bold;
+    align-items: center;
+    margin-left: auto;
+  }
+
+  .main
+  {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
     display: flex;
     align-items: center;
     padding-top: 15;
@@ -146,11 +318,12 @@ body
 
 .up-note
 {
+    margin-left: 13.5px;
+    margin-right: 13.5px;
     border: 1px solid #CDCDCD;
     border-left: 4px solid #CDCDCD;
     border-radius: 4px;
     height: 98px;
-    width: 1408;
     background-color: #e8f4fc;
 }
 
@@ -162,8 +335,26 @@ body
 
 .up-note-text
 {
-    margin-left: 5px;
+    margin-left: 10px;
     padding-top: 20px;
     padding-right: 25px;
 }
+}
 
+.left-menu-selector
+{
+  list-style-type: none;
+}
+
+.left-menu-selector-item
+{
+  text-decoration: none;
+  padding-top: 10px;
+}
+
+.left-menu-selector-main
+{
+  padding-top: 10px;
+  font-weight: bold;
+  text-decoration: none;
+}
